# AI_HANDS_ON_FINAL

./: Dockerfile  README.html  README.md  app.py  hp_tuning.py  main.py  pyproject.toml  requirements.txt
feature_engineering/: dimensionality_reduction.py  feature_engineering.py  feature_selection.py  main.py
models/: hp_tabnetreg.xz  model_interpretation.py  tabnet2_reg.py  tabnet2_reg_model_fit.py  tabnetreg.xz  xgb_reg.py  xgb_reg_model_fit.py  xgbreg.xz
models/templates/: ai_model_template.py  ai_train_template.py
utils/: explore_imputation.py  features.py  fetch_nyc_rain_prob.py  nyc_rain_probabilities.pkl  read_cords.py
