[project]
name = "bekiaris_final"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "fastapi==0.115.12",
    "pandas==2.2.3",
    "pydantic==2.11.4",
    "pytorch-tabnet==4.1.0",
    "scikit-learn==1.5.2",
    "tabulate==0.9.0",
    "uvicorn==0.34.2",
    "xgboost==3.0.2",
]
